--- a/04_demo/index.html
+++ b/04_demo/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script type="text/javascript" src="../js/vue.js"></script>
+    <title>数据绑定</title>
 </head>
+<!-- 
+Vue中有2种数据绑定的方式：
+    1. 单向绑定（v-bind）：数据只能从data流向页面。
+    2. 双向绑定（v-model）：数据不仅能从data流向页面，还可以从页面流向data。
+    备注：
+        1.双向绑定一般都应用在表单类元素上（如：input、select等）
+        2.v-model:value可以简写为v-model，因为v-model默认收集的就是value值。
+
+ -->
 <body>
-    
+    <div id="root">
+        <!-- 普通写法 -->
+        单向绑定输入框: <input type="text" v-bind:value = "name"> <br/>
+        双向绑定输入框: <input type="text" v-model:value = "name"><br/>
+        <!-- 简化写法 -->
+        单向绑定输入框: <input type="text" :value = "name"> <br/>
+        双向绑定输入框: <input type="text" v-model = "name">
+        <!-- 如下代码是错误的，因为v-model只能用在表单（输入）类的元素 -->
+        <h2 v-model:x="name">AA</h2>
+    </div>
+    <script type="text/javascript">
+        Vue.config.productionTip = false
+        new Vue({
+            el:'#root',
+                data:{
+                    name:"hello"
+                }    
+        }
+    )
+    </script>
 </body>
 </html>
