upload by master

--- a/08_event/index.html
+++ b/08_event/index.html
@@ -18,7 +18,8 @@
     5.@click="demo"和@click="demo($event)"效果一致，但后者可以传参;
  -->
 <body>
-    <a href="./decorate.html">事件修饰符</a>
+    <a href="./decorate.html">事件修饰符</a><br/>
+    <a href="./key.html">键盘事件</a>
     <div id="root">
         <h2>welcome to {{name}}</h2>
         <button v-on:click="Showinfo">事件标签完整写法</button>
