--- a/04_demo/index.html
+++ b/04_demo/index.html
@@ -25,7 +25,7 @@ Vue中有2种数据绑定的方式：
         单向绑定输入框: <input type="text" :value = "name"> <br/>
         双向绑定输入框: <input type="text" v-model = "name">
         <!-- 如下代码是错误的，因为v-model只能用在表单（输入）类的元素 -->
-        <h2 v-model:x="name">AA</h2>
+        <!-- ~ <h2 v-model:x="name">AA</h2> -->
     </div>
     <script type="text/javascript">
         Vue.config.productionTip = false
@@ -35,6 +35,7 @@ Vue中有2种数据绑定的方式：
                     name:"hello"
                 }    
         }
+        
     )
     </script>
 </body>
